Fixed shadow behind navbar

--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,11 @@ header img {
 nav {
     height: 60px;
     background-color: #F29F05;
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,1);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,1);
-    box-shadow: 0px 0px 50px 50px rgba(0,0,0,1);
+    -webkit-box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.6);
+    position: relative;
+    z-index: 99;
 }
 
 nav ul,
